[tool.poetry]
name = 'langchain-memory'
version = '0.1.0'
description = ''
authors = ['h-k-nyosu <kuro.h1020@gmail.com>']
readme = 'README.md'
packages = [{include = 'langchain_memory'}]

[tool.poetry.dependencies]
python = '^3.10'
fastapi = '^0.95.0'
python-dotenv = '^1.0.0'
uvicorn = '^0.21.1'
pydantic = '^1.10.6'
httpx = '^0.23.3'
langchain = '^0.0.117'
google-api-python-client = '^2.81.0'
openai = '^0.27.2'
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"


[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
